--- a/Makefile.am
+++ b/Makefile.am
@@ -229,7 +229,9 @@ test_libbitcoin_test_SOURCES = \
     test/chain/script.cpp \
     test/chain/script.hpp \
     test/chain/transaction.cpp \
+    test/chain/script/opcode.cpp \
     test/chain/script/operation.cpp \
+    test/chain/script/operation_iterator.cpp \
     test/config/authority.cpp \
     test/config/base58.cpp \
     test/config/checkpoint.cpp \
@@ -355,6 +357,7 @@ include_bitcoin_bitcoin_chain_script_HEADERS = \
     include/bitcoin/bitcoin/chain/script/interpreter.hpp \
     include/bitcoin/bitcoin/chain/script/opcode.hpp \
     include/bitcoin/bitcoin/chain/script/operation.hpp \
+    include/bitcoin/bitcoin/chain/script/operation_iterator.hpp \
     include/bitcoin/bitcoin/chain/script/rule_fork.hpp \
     include/bitcoin/bitcoin/chain/script/script.hpp \
     include/bitcoin/bitcoin/chain/script/script_pattern.hpp \
