--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -569,6 +569,9 @@
     <ClCompile Include="..\..\..\..\src\chain\script\operation_iterator.cpp">
       <Filter>src\chain\script</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\chain\script\operation_stack.cpp">
+      <Filter>src\chain\script</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\resource.h">
@@ -1124,6 +1127,9 @@
       <Filter>include\bitcoin\chain\script</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\script\operation_iterator.hpp">
+      <Filter>include\bitcoin\chain\script</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\script\operation_stack.hpp">
       <Filter>include\bitcoin\chain\script</Filter>
     </ClInclude>
   </ItemGroup>
